k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-cd-deployment
  labels:
    app: ci-cd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ci-cd
  template:
    metadata:
      labels:
        app: ci-cd
  template:
    metadata:
      labels:
        app: ci-cd
    spec:
      containers:
        - name: ci-cd
          # Since we are local, we will build this image directly into the local daemon
          image: local/ci-cd:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-service
spec:
  type: NodePort
  selector:
    app: ci-cd
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 32000
